--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100">
     <div id="app" class="container mx-auto px-4 py-8">
-        <h1 class="text-4xl font-bold text-center mb-8">TrailThai Fusion</h1>
+        <h1 class="text-4xl font-bold text-center mb-8">RunKick</h1>
         <div id="calendar" class="mb-8"></div>
         <div id="trainingDetails" class="bg-white shadow-md rounded p-6"></div>
     </div>
